web-infras/parser/tests/fixtures/babel/es2015/uncategorised/227/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,45)
1|function hello() {'use strict'; ({ i: 10, s(eval) { } }); }
 |                                           ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,45)
1|function hello() {'use strict'; ({ i: 10, s(eval) { } }); }
 |                                           ^
